--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ jupyterlab==4.0.5
 notebook==6.0.3
 matplotlib==3.1.2
 meshcat==0.3.2
-quadprog==0.1.11
+# quadprog==0.1.11
 scipy==1.10.1
 tensorflow==2.13.0
 
